--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,47 @@
 body {
   text-align: center;
   background-color: #283149;
-  background: url('images/background.jpg');
-  background-size: cover;
 }
 
 h1 {
   font-size: 5rem;
-  color: #05171d;
+  color: #DBEDF3;
   font-family: "Arvo", cursive;
-  text-shadow: 3px 0 #03968e;
+  text-shadow: 3px 0 #DA0463;
 
 }
 
 footer {
   color: #DBEDF3;
   font-family: sans-serif;
+}
+
+.w {
+  background-image: url("images/tom1.png");
+}
+
+.a {
+  background-image: url("images/tom2.png");
+}
+
+.s {
+  background-image: url("images/tom3.png");
+}
+
+.d {
+  background-image: url("images/tom4.png");
+}
+
+.j {
+  background-image: url("images/snare.png");
+}
+
+.k {
+  background-image: url("images/crash.png");
+}
+
+.l {
+  background-image: url("images/kick.png");
 }
 
 .set {
@@ -30,39 +56,7 @@ footer {
 .red {
   color: red;
 }
-.drum { 
-  min-height: 8vh;
-  align-items: center;
-  justify-content: center;
 
-  border: .4rem solid black;
-  border-radius: .5rem;
-  margin: 1rem;
-  font-size: 1.5rem;
-  padding: 1rem .5rem;
-  transition: all .07s ease;
-  width: 10rem;
-  text-align: center;
-  color:#ff7b00;
-  size: 2.6rem;
-  background: rgba(0,0,0,0.4);
-  text-shadow: 0 0 .5rem black;
-  
-  
-}
-
-#footer{
-  padding: 2% 8%;
-  text-align: center;
-  color: antiquewhite;
-}
-
-.footer-link{
- margin: 20px 10px;
- 
-}
-
-/* 
 .drum {
   outline: none;
   border: 10px solid #404B69;
@@ -79,4 +73,17 @@ footer {
   text-align: center;
   margin: 10px;
   background-color: white;
-} */
+}
+
+#footer{
+  padding: 2% 8%;
+  text-align: center;
+  background-color: #404B69;
+  color: rgb(233, 233, 241);
+}
+
+.footer-link{
+ margin: 20px 10px;
+ 
+ color: rgb(233, 233, 241);
+}
